--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Random Inspirational Quotes" />
+    <meta name="description" content="Random Food Pic" />
     <meta name="keywords" content="mths, ics2o" />
     <meta name="author" content="Venika Sem" />
     <meta name="theme-color" content="#FFFFFF" />
-    <title>Random Inspirational Quotes</title>
+    <title>Random Food Pic</title>
     <link rel="canonical" href="https://github.com/venika-sem/ICS2O-Assignment6-HTML" />
     <link rel="manifest" href="/ICS2O-Assignment6-HTML/manifest.webmanifest" />
     <link rel="stylesheet" href="./css/style.css" />
